<resources>
    <!--  label  -->
    <string name="app_name">My Application</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="submit">Submit</string>
    <string name="registration">REGISTRATION</string>


    <!-- array data  -->
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>